{{$NEXT}}

    [ ENHANCEMENTS ]
    * GH #396: Test that Dancer::Session::Cookie isn't broken
      (Michael G. Schwern)
    * GH #399: Make sure session can have their name changed.
      (Michael G. Schwern)
    * Dancer::Test tests assumes 'GET' if their first argument is scalar.
      (Yanick Champoux)
    * send_file accepts optional content-type declaration, to override guessed
      MIME type, e.g. send_file $filename, content_type => 'image/png'
      (Alberto Simões, requested by Michael G Schwern)
    * send_file accepts optional absolute option, to send an absolute path
      (Alberto Simões)

    [ DOCUMENTATION ]
    * Add documentation to send_file optional argument
      (Alberto Simões)
    * Fix plack_middlewares example in the cookbook
      (Michael G. Schwern)
    * Extend the POD on plugin_setting to prevent a pitfall with plugin
      modules more than 3 levels deep.
      (Stefan Hornburg)

1.3020      21.03.2011
    ** Codename: The Schwern Cometh // Michael G. Schwern **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

1.3019_02   14.03.2011

    [ BUG FIXES ]
    * GH #354: Tokens are not passed to layout if no params are passed to
      template.
      (Damien Krotkine)

1.3019_01   13.03.2011

    [ BUG FIXES ]
    * GH #393: Reset vars for each new request.
      (Franck Cuny)

    [ ENHANCEMENTS ]
    * GH #391: Dancer::Logger::Note now exists. :)
      (Sawyer X)
    * Porting documentation on WRAPPER to Dancer::Template::TemplateToolkit.
      (Sawyer X)
    * GH #387: Document views and appdir in Dancer::Config.
      (Michael G. Schwern)
    * Add a new symbol to exporter ':script'.
      (Franck Cuny)
    * GH #397: Support cookie expire times like "+2h".
      (Michael G. Schwern)

1.3014_01   10.03.2011

    [ BUG FIXES ]
    * GH #373: Display valid path to the main app file in the welcome screen.
      (Franck Cuny)
    * GH #152, GH #170, GH #362: Log dir is not created when logger is not set