@@ -31,10 +31,7 @@ is_deeply $data2, $data, "data is correctly deserialized";
 # helpers
 
 $json = to_json($data);
-is $json, '{
-   "foo" : 42
-}
-', "data is correctly serialized";
+like $json, qr/^\s*{\s+"foo" : 42\s+}\s*$'/s, "data is correctly serialized";
 
 $data2 = from_json($json);
 is_deeply($data2, $data, "data is correctly deserialized");
